--- a/slave/src/main/resources/application.properties
+++ b/slave/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+spring.application.name=slave
 
+spring.batch.jdbc.initialize-schema=always
+spring.batch.job.enabled=false
+
+datasource1.url=jdbc:mysql://localhost:3306/batch_processing?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+datasource1.driver-class-name=com.mysql.cj.jdbc.Driver
+datasource1.username=root
+datasource1.password=123
+datasource1.maximum.pool.size=10
+
+datasource2.url=jdbc:mysql://localhost:3306/batch_destination?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+datasource2.driver-class-name=com.mysql.cj.jdbc.Driver
+datasource2.username=root
+datasource2.password=123
+datasource2.maximum.pool.size=10
+
+rabbitmq.host=localhost
+rabbitmq.port=5672
+rabbitmq.username=guest
+rabbitmq.password=guest
+rabbitmq.queue-one=requests
+rabbitmq.queue-two=replies
+rabbitmq.topic-exchange=remote-chunking-exchange
+rabbitmq.topic-exchange-routing-key-one=requests
+rabbitmq.topic-exchange-routing-key-two=replies
