--- a/slave/src/main/resources/application.properties
+++ b/slave/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=slave
+bootiful.batch.chunk.slave=true
 
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
