--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=master
+bootiful.batch.chunk.master=true
 
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
