--- a/slave/src/main/resources/application.properties
+++ b/slave/src/main/resources/application.properties
@@ -23,3 +23,5 @@ rabbitmq.queue-one=customer-requests
 rabbitmq.queue-two=customer-replies
 rabbitmq.queue-three=year-report-requests
 rabbitmq.queue-four=year-report-replies
+rabbitmq.queue-five=game-by-year-requests
+rabbitmq.queue-six=game-by-year-replies
