The Spring Retry has been added for when the database or message broker is disconnected to be connected again.

--- a/slave/src/main/resources/application.properties
+++ b/slave/src/main/resources/application.properties
@@ -2,17 +2,22 @@ spring.application.name=slave
 bootiful.batch.chunk.slave=true
 spring.batch.job.enabled=false
 
+retry.max-attempts=2000
+retry.fixed-backoff=30
+
 datasource1.url=jdbc:mysql://localhost:3306/batch_processing?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 datasource1.driver-class-name=com.mysql.cj.jdbc.Driver
 datasource1.username=root
 datasource1.password=123
-datasource1.maximum.pool.size=10
+datasource1.maximum.pool.size=2
+datasource1.maximum.lifetime=30
 
 datasource2.url=jdbc:mysql://localhost:3306/batch_destination?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 datasource2.driver-class-name=com.mysql.cj.jdbc.Driver
 datasource2.username=root
 datasource2.password=123
 datasource2.maximum.pool.size=10
+datasource2.maximum.lifetime=30
 
 rabbitmq.host=localhost
 rabbitmq.port=5672
