The Spring Retry has been added for when the database or message broker is disconnected to be connected again.

--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=master
-bootiful.batch.chunk.master=true
-
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
+
+enable.schedule=true
+batch.job-launcher.schedule-with-fixed-delay=5
+
+bootiful.batch.chunk.master=true
+
+
 
 retry.max-attempts=2000
 retry.fixed-backoff=30
