--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=master
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
+time.zone=Asia/Tehran
 
 enable.schedule=true
-batch.job-launcher.schedule-with-fixed-delay=10
+batch.job-launcher.schedule-with-fixed-delay=5
 
 bootiful.batch.chunk.master=true
 
@@ -37,3 +38,5 @@ rabbitmq.queue-three=year-report-requests
 rabbitmq.queue-four=year-report-replies
 rabbitmq.queue-five=game-by-year-requests
 rabbitmq.queue-six=game-by-year-replies
+rabbitmq.queue-seven=email-requests
+rabbitmq.queue-eight=email-replies
