--- a/slave/src/main/resources/application.properties
+++ b/slave/src/main/resources/application.properties
@@ -30,3 +30,5 @@ rabbitmq.queue-three=year-report-requests
 rabbitmq.queue-four=year-report-replies
 rabbitmq.queue-five=game-by-year-requests
 rabbitmq.queue-six=game-by-year-replies
+rabbitmq.queue-seven=email-requests
+rabbitmq.queue-eight=email-replies
