--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <java.version>21</java.version>
         <spring.version>3.2.0</spring.version>
         <spring.integration.amqp>6.2.0</spring.integration.amqp>
+        <spring.mail>3.2.1</spring.mail>
     </properties>
 
     <dependencies>
@@ -79,7 +80,11 @@
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-mail</artifactId>
+                <version>${spring.mail}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
