--- a/slave/pom.xml
+++ b/slave/pom.xml
@@ -16,6 +16,10 @@
     <properties>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
     </dependencies>
 
