The Spring Retry has been added for when the database or message broker is disconnected to be connected again.

--- a/master/pom.xml
+++ b/master/pom.xml
@@ -28,8 +28,8 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <excludes>
-                    <exclude>**/static/help/**</exclude>
-                    <exclude>**/static/data/**</exclude>
+                    <exclude>/static/help/**</exclude>
+                    <exclude>/static/data/**</exclude>
                     <!--<exclude>application.properties</exclude>-->
                 </excludes>
             </resource>
