--- a/slave/src/main/resources/application.properties
+++ b/slave/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=slave
 bootiful.batch.chunk.slave=true
 spring.batch.job.enabled=false
+time.zone=Asia/Tehran
 
 retry.max-attempts=2000
 retry.fixed-backoff=30
